--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-midnight
+
+title TechStart Porfolio 
+
+description: I am working through the 5 TechStart projects. Aliza Rodriguez 
